--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main">
+        <p>Hello World!</p>
+    </div>
 </body>
 </html>
